Ispravljeno prikazivanje gp

--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -148,7 +148,8 @@
                 <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header class="whitetext column-name">Promo
                     GP
                     2</mat-header-cell>
-                <mat-cell class="text-bold" *matCellDef="let row">{{ (row.gp * 100).toFixed(2) }}%</mat-cell>
+                <mat-cell class="text-bold" *matCellDef="let row">{{ row.gp ? (row.gp).toFixed(2) : 0
+                    }}%</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="resultSalePercent">
@@ -171,7 +172,8 @@
             </ng-container>
 
             <ng-container matColumnDef="estimateGP">
-                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate GP</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Estimate
+                    GP</mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimateGP}}</mat-cell>
             </ng-container>
 
