--- a/src/app/dialogs/promo-dialog/promo-dialog.component.html
+++ b/src/app/dialogs/promo-dialog/promo-dialog.component.html
@@ -222,7 +222,7 @@
             *ngIf="data.estimateGP && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5) && !isDeclined">
             <mat-form-field appearance="fill">
                 <mat-label>Estimate GP %</mat-label>
-                <input type="number" matInput name="result" [required]="flag === 4" disabled
+                <input type="number" matInput name="estimateGp" [required]="flag === 4" disabled
                     [value]="data.estimateGP.toFixed(2)">
             </mat-form-field>
         </div>
@@ -235,6 +235,22 @@
             </mat-form-field>
         </div>
 
+        <div class="form"
+            *ngIf="data.estimateGPCash && (flag === 1 || flag===2 || flag=== 4 || flag===3|| flag===5) && !isDeclined">
+            <mat-form-field appearance="fill">
+                <mat-label>Estimate GP Abs</mat-label>
+                <input type="number" matInput name="estimateGpCash" [required]="flag === 4" disabled
+                    [value]="data.estimateGPCash.toFixed(2)">
+            </mat-form-field>
+        </div>
+
+        <div class="form" *ngIf="!isDeclined && flag !== 1 && flag !== 6">
+            <mat-form-field appearance="fill">
+                <mat-label>GP Abs</mat-label>
+                <input type="number" matInput [value]="data.gpCash.toFixed(2)" required name="gpCash"
+                    [disabled]="flag === 2 || flag === 3|| flag === 4 || flag === 5">
+            </mat-form-field>
+        </div>
 
         <div class="form" *ngIf="(flag===3 || flag===5) && data.comment && data.comment !=''">
             <mat-form-field>
