--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -31,7 +31,7 @@
     <div style="justify-content: center;margin-right: 30px;">SECONDARY POSITIONS</div>
   </div>
 
-  <div class="item resolve-fb fadeIn second" [routerLink]="['/priceScanner']">
+  <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/priceScanner']">
     <!-- ENABLE: -->
     <p>
       <img src="../../../assets/icons8-barcode-scanner-64.png" width="50px" height="50px"
