Naslovi unfinished i finished u promo sredjeni

--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -62,7 +62,7 @@
 </mat-accordion>
 
 
-        <h2>Unfinished</h2><br>
+      <div class="title">  <h2>Unfinished</h2> </div>
         <div>
         <div class="table mat-elevation-z8">
             <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
@@ -216,7 +216,7 @@
             </mat-paginator>
         </div>
 
-        <h2>Finished</h2><br>
+      <div class="title">  <h2>Finished</h2> </div>
 <div>
     <div class="table mat-elevation-z8">
         <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
