--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -180,7 +180,7 @@
                     <mat-cell class="action-cell" *matCellDef="let row; let i=index">
 
                         <!-- POTVRDJENO, CEKA REZULTAT-->
-                        <button *ngIf="type === 'PROMO_LIST' && row.confirmed && !row.resultSale && isDatePast(row.dateEnd)" mat-icon-button 
+                        <button *ngIf="type === 'PROMO_LIST' && row.confirmed && !row.resultSale && isDateBeforeToday(row.dateEnd)" mat-icon-button 
                             color="primary">
                             <mat-icon area-label="Actual">error</mat-icon>
                         </button>
@@ -190,7 +190,7 @@
                             <mat-icon area-label="For confirmation">help_outline</mat-icon>
                         </button>
                          <!-- TRAJE -->
-                         <button *ngIf="type === 'PROMO_LIST' && !row.declined && row.confirmed && !isDatePast(row.dateEnd)" mat-icon-button
+                         <button *ngIf="type === 'PROMO_LIST' && !row.declined && row.confirmed && isDateBeforeToday(row.dateEnd)==false" mat-icon-button
                          color="primary">
                          <mat-icon area-label="For confirmation">access_time</mat-icon>
                      </button>
@@ -200,7 +200,7 @@
                         </button>
                         <!-- ZAVRSENA -->
                         <button *ngIf="type === 'PROMO_LIST' && row.resultSale" mat-icon-button color="primary">
-                            <mat-icon area-label="Finished">done_all</mat-icon>
+                            <mat-icon area-label="Finished">check_circle</mat-icon>
                         </button>
                         <button *ngIf="type === 'PROMO_LIST'" mat-icon-button color="primary"
                             (click)="openDialog(6,false,row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, '', '', row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, 0, row.gp)">
@@ -366,20 +366,29 @@
                     </button>
                 </mat-header-cell>
                 <mat-cell class="action-cell" *matCellDef="let row; let i=index">
-                    <button *ngIf="type === 'PROMO_LIST' && row.confirmed && !row.resultSale" mat-icon-button
-                        color="primary">
-                        <mat-icon area-label="Actual">check_circle</mat-icon>
-                    </button>
-                    <button *ngIf="type === 'PROMO_LIST' && !row.confirmed && !row.declined" mat-icon-button
-                        color="primary">
-                        <mat-icon area-label="For confirmation">access_time</mat-icon>
-                    </button>
-                    <button *ngIf="type === 'PROMO_LIST' && row.declined" mat-icon-button color="primary">
-                        <mat-icon area-label="Declined">close</mat-icon>
-                    </button>
-                    <button *ngIf="type === 'PROMO_LIST' && row.resultSale" mat-icon-button color="primary">
-                        <mat-icon area-label="Finished">done_all</mat-icon>
-                    </button>
+                     <!-- POTVRDJENO, CEKA REZULTAT-->
+                     <button *ngIf="type === 'PROMO_LIST' && row.confirmed && !row.resultSale && isDateBeforeToday(row.dateEnd)" mat-icon-button 
+                     color="primary">
+                     <mat-icon area-label="Actual">error</mat-icon>
+                 </button>
+                 <!-- CEKA POTVRDU -->
+                 <button *ngIf="type === 'PROMO_LIST' && !row.confirmed && !row.declined" mat-icon-button
+                     color="primary">
+                     <mat-icon area-label="For confirmation">help_outline</mat-icon>
+                 </button>
+                  <!-- TRAJE -->
+                  <button *ngIf="type === 'PROMO_LIST' && !row.declined && row.confirmed && isDateBeforeToday(row.dateEnd)==false" mat-icon-button
+                  color="primary">
+                  <mat-icon area-label="For confirmation">access_time</mat-icon>
+              </button>
+                 <!-- DECLINED -->
+                 <button *ngIf="type === 'PROMO_LIST' && row.declined" mat-icon-button color="primary">
+                     <mat-icon area-label="Declined">close</mat-icon>
+                 </button>
+                 <!-- ZAVRSENA -->
+                 <button *ngIf="type === 'PROMO_LIST' && row.resultSale" mat-icon-button color="primary">
+                     <mat-icon area-label="Finished">check_circle</mat-icon>
+                 </button>
                     <button *ngIf="type === 'PROMO_LIST'" mat-icon-button color="primary"
                         (click)="openDialog(6,false,row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, '', '', row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, 0, row.estimateGP, row.gp, row.estimateGPCash, row.gpCash)">
                         <mat-icon area-label="Copy">filter_none</mat-icon>
